--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,22 +5,25 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.0.1",
+    "@chakra-ui/react": "^3.0.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.10",
     "next-themes": "^0.3.0",
+    "pitchfinder": "^2.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "tone": "^15.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
