--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
-<<<<<<< HEAD
-    "tone": "^15.0.4"
-=======
+    "tone": "^15.0.4",
     "wavesurfer.js": "^7.8.8"
->>>>>>> 4f3079d95c5f26796dc1df3fbb6c9758f80a5f45
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
